src/scss/components/_hero.scss
.hero {
    margin-top: $header-height * -1;
    padding-top: $header-height;
    height: 100%;
}

.hero__slider {
    position: relative;
    overflow: hidden;
    height: 100%;
    width: 100%;
}

.cases {
    width: 100%;
    height: 100%;
    position: relative;
}

.case {
    width: 100%;
    height: 100%;
    position: relative;
    margin-bottom: baselines(4);

    &:last-child {
        margin-bottom: 0;
    }
}

.case__info {
    position: absolute;
    top: 50%;
    z-index: 1;
    transform: translateY(-50%);
    width: 100%;
    height: 40px;
}

.case__title {
    font-size: font-size(h3);
    top: -30px - baselines(5); //line-height + 5 baselines
    position: absolute;
    width: 100%;
    text-align: center;
    font-weight: 700;
    text-transform: uppercase;
    line-height: 1;
}

.case__link {
    font-size: font-size(small);
    color: #fff;
    background: colour(black);
    border-radius: 40px;
    height: 40px;
    line-height: 40px;
    vertical-align: middle;
    text-align: center;
    width: 150px;
    display: block;
    margin: 0 auto;
}

.case__figure {
    width: 100%;
    height: 100%;
}

.case__image {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    object-fit: cover;
    object-position: 45% 50%;
}

.hero__scroll-anchor {
    background: #fff;
    border-radius: 100%;
    height: 40px;
    width: 40px;
    position: absolute;
    bottom: baselines(2);
    left: 50%;
    transform: translateX(-50%);
    font-size: 40px;
}

.hero__slider--active {
    font-size: 0;
    line-height: 0;
    overflow: hidden;
    white-space: nowrap;

    .cases {
        display: inline-block;
    }

    .case {
        display: inline-block;

        &:last-child {
            margin-bottom: baselines(4);
        }
    }
}

.hero__slider-nav {
}

.slider-nav {
    width: 270px;
    margin: 0 auto;
    position: absolute;
    top: 50%;
    left: 50%;
    margin-left: (270px/2) * -1;
}

.slider-nav__button {
    border: 0;
    -webkit-appearance: none;
    background: colour(black);
    border-radius: 100%;
    color: #fff;
    width: 40px;
    height: 40px;
    padding: 0;
    cursor: pointer;
    position: absolute;
    //XXX: magic number
    top: 9px;

    .i {
        font-size: 40px;
    }

    &:focus {
        outline: 0;
    }
}

.slider-nav__button--next {
    right: 0;
}


@media (min-width: breakpoint(tablet)) {
    .hero {
        margin-top: $header-height-tablet * -1;
        padding-top: $header-height-tablet;
    }

    .slider-nav__button {
        //XXX magic number
        top: 20px;
    }

    .case__title {
        font-size: font-size(h2);
        top: -40px - baselines(6);
    }
}

@media (min-width: breakpoint(desktop)) {
    .case__title {
        font-size: font-size(h1);
        top: -50px - baselines(7);
    }

    .case__link:hover {
        background: colour(red);
        color: #fff;
    }

    .slider-nav__button:hover {
        background: colour(red);
    }

    .hero__scroll-anchor {
        height: 54px;
        width: 54px;
        position: absolute;
        bottom: baselines(5);
        left: 50%;
        transform: translateX(-50%);
        font-size: 50px;
        line-height: 54px;
        vertical-align: middle;

        .i {
            text-align: center;
        }

        .i:before {
            content: "\e90b";
            display: block;
        }

        .i:after {
            display: block;
            content: "\e901";
            font-size: 40px;
            color: #fff;
        }
    }
}

